# pluma-csv2json-plugin

./: .gitignore  CMakeLists.txt  LICENSE.md  Makefile  README.md
cmake/: FindSphinx.cmake
docs/: CMakeLists.txt  Doxyfile  Doxyfile.in  conf.py  index.rst
src/: CMakeLists.txt  csv2json.cxx  csv2json.h
test/: test.csv  test_plugin.cxx
